# keywordSpotting

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindSNDFILE.cmake
include/keywordSpotter/: EmbeddingNetwork.h
include/keywordSpotter/features/: Spectrogram.h
include/keywordSpotter/lib/: EmbeddingDatabase.h  EmbeddingNetwork.h
include/keywordSpotter/lib/features/: Spectrogram.h
include/keywordSpotter/lib/sound/: Sound.h
include/keywordSpotter/lib/utils/: WavUtils.h
include/keywordSpotter/sound/: Sound.h
include/keywordSpotter/utils/: WavUtils.h
src/: EmbeddingNetwork.cpp  main.cpp  record_spectrogram.cpp  stream_portaudio.cpp  test_embedding_database.cpp  test_portaudio.cpp  test_tensorflow.cpp  write_spectrogram.cpp
src/features/: FftRealPair.cpp  Spectrogram.cpp
src/lib/: EmbeddingDatabase.cpp  EmbeddingNetwork.cpp
src/lib/features/: FftRealPair.cpp  Spectrogram.cpp  pocketfft.c
src/lib/sound/: Sound.cpp
src/lib/utils/: WavUtils.cpp
src/sound/: Sound.cpp
src/utils/: WavUtils.cpp
